[project]
name = "comfyui-mask-utils"
version = "1.0.0"
description = "ComfyUI custom node: remove small noise regions from alpha matte masks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "scipy",
]

[project.urls]
Repository = "https://github.com/enigmatice/comfyui-mask-utils"

[tool.comfy]
PublisherId = "enigmatice"
DisplayName = "Mask Utils"
Icon = ""
