[project]
name = "comfyui-enigmatic-nodes"
version = "1.1.0"
description = "ComfyUI custom nodes by enigmatice: mask utilities and analog video effects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "Pillow",
    "opencv-python",
]

[project.urls]
Repository = "https://github.com/enigmatice/comfyui-enigmatic-nodes"

[tool.comfy]
PublisherId = "enigmatice"
DisplayName = "Enigmatic Nodes"
Icon = ""
